# worldarena

./: .gitignore  README.md  build_aligned_world_model_video_pack.py  convert_robotwin_to_videox_fun.py  convert_robotwin_to_wan.py  download_aloha_direct.py  download_extract_convert_pipeline.py  download_extract_convert_pipeline_v2.py  download_robotwin_aloha.py  download_robotwin_aloha_v2.py  download_robotwin_corrected.py  download_robotwin_hf_hub.py  download_robotwin_v3.py  download_robotwin_v4.py  extract_robotwin_parallel.py  finish_eval_ckpt_latest_test1000.sh  generate_final_report.py  generate_flow_matching_slides_cn.py  lmhub_probe.py  make_six_model_available_table.py  monitor_eval_ckpt_latest_test1000.sh  prepare_test_dataset_for_inference.py  prepare_wan_lora_training.py  reformat_data_for_training.py  robotwin_auto_download.py  seedvr_eval_ckpt_latest_test1000.sh  split_aligned_world_model_pack.py
config/: asset_manifest.yaml
reproductions/physics_state_gen/worldmodelphy/: README.md  pyproject.toml
reproductions/physics_state_gen/worldmodelphy/artifacts/: summary.json
reproductions/physics_state_gen/worldmodelphy/artifacts/runs/bounce_gru_long/: metrics.json
reproductions/physics_state_gen/worldmodelphy/docs/: assets_manifest.md  build_pptx.py  experiment_summary_cn.md  report.md  research_summary.md  slides_cn.md
reproductions/physics_state_gen/worldmodelphy/scripts/: export_slides.py  run_all.py
reproductions/physics_state_gen/worldmodelphy/worldmodelphy/: __init__.py  constants.py  data.py  eval.py  model.py  pipeline.py  training.py
(+3398 files in other folders)
