[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "worldmodelphy"
version = "0.1.0"
description = "Tiny video generative model experiments for physics emergence"
requires-python = ">=3.10"
dependencies = ["torch>=2.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["worldmodelphy*"]
